# untitled

./: .gitignore
back/: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
back/app/: .gitignore  config.py  main.py  pyproject.toml
back/app/auth/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py  utils.py
back/app/auth/api/: user.py
back/app/music/: dao.py  models.py  router.py  schemas.py
back/app/utils/: handlers.py  log.py
back/app/utils/dao/: base.py  database.py  session_maker.py
back/app/utils/s3/: config.py  routine.py  utils.py
back/go-auth/: .air.toml  .gitignore
back/go-auth/internal/testutils/: logging.go  testutils.go
back/go-auth/internal/users/ctl/: auth.go  auth_test.go  ctl_test.go
back/go-auth/internal/users/mdl/: auth.go  mdl.go
back/go-auth/internal/users/mw/: auth.go
back/go-auth/internal/users/repo/: repo.go
back/go-auth/internal/users/svc/: auth.go
back/go-auth/internal/users/urls/: urls.go
back/migrations/: env.py
back/migrations/versions/: 0a1e08381613_initial_migration.py  faed777b0204_init.py
backend/: .gitignore  docker-compose.yml  go.mod  go.sum
backend/cmd/: main.go
backend/internal/cfg/: cfg.go  inits.go
backend/internal/interfaces/: app.go
backend/internal/musicstorage/: app.go
backend/internal/musicstorage/ctl/: ctl.go  search.go
backend/internal/users/: app.go
backend/pkg/dockermocker/: dockermocker.go  seeds.go
backend/scripts/: runtests.sh  startapp.sh
front/web/: package-lock.json  package.json  vite.config.js
front/web/src/: App.jsx  index.css
(+32 files in other folders)
